--- a/components/header.html
+++ b/components/header.html
@@ -17,7 +17,7 @@
     <div class="collapse navbar-collapse navbar-inverse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="/about/about.html">About</a></li>
-        <li><a href="index.html">Projects</a></li>
+        <li><a href="/index.html">Projects</a></li>
         <li><a href="/resume.pdf">Résumé</a></li>
        </ul>
     </div><!-- /.navbar-collapse -->
