Various stylistic changes, added warning to output, added footer

--- a/components/footer.html
+++ b/components/footer.html
@@ -1,3 +1,5 @@
+    <div id="footer">Copyright 2017 Isaac Haberman</div>
+
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="/bootstrap/js/jquery-3.1.1.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
