--- a/components/header.html
+++ b/components/header.html
@@ -1,7 +1,7 @@
 <body>
 
-<nav class="navbar navbar-default navbar-inverse" >
-  <div class="container-fluid">
+<nav class="navbar navbar-default navbar" >
+  <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -14,12 +14,12 @@
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse navbar-inverse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav navbar-right">
+    <div class="collapse navbar-collapse navbar" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav navbar-center">
         <li><a href="/about/about.html">About</a></li>
         <li><a href="/index.html">Projects</a></li>
         <li><a href="/resume.pdf">Résumé</a></li>
        </ul>
     </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
+  </div><!-- /.container -->
 </nav>
