--- a/components/style.css
+++ b/components/style.css
@@ -1,3 +1,12 @@
+body {
+  font-family: Courier;
+}
+
+a:link {color: #777; text-decoration: underline; }
+a:active {color: #777; text-decoration: underline; }
+a:visited {color: #aaa; text-decoration: underline; }
+a:hover {color: #000; text-decoration: none; }
+
 h1{
   text-align: center;
   margin-bottom: 50px;
@@ -5,7 +14,8 @@ h1{
 }
 
 .blurb{
-	background-color: #EEEEEE;
+	background: none;
+  border: none;
 	display: inline-block;
   padding: 30px;
   margin-bottom: 50px;
@@ -25,32 +35,37 @@ h1{
   z-index: -1;
 }
 
+
+.navbar-default {
+     background: none; 
+     border: none; 
+}
+.navbar>.container{
+  margin-top: 20px;
+}
+
+.navbar-default .navbar-brand {
+  font-size: 24px;
+  color: black;
+  text-decoration: none;
+}
+
+.navbar-default .navbar-collapse, 
+.navbar-default .navbar-form{
+  border: none;
+}
+
+
+.list-group-item:last-child {
+  margin-bottom: 50px;
+}
+
+
 #footer{
   clear: both;
   text-align: center;
   margin-top: 10px;
   margin-bottom: 30px;
-}
-
-.navbar-inverse .navbar-brand, 
-.navbar-inverse .navbar-nav>li>a{
-  color: white;
-}
-
-.navbar-inverse .navbar-brand:hover, 
-.navbar-inverse .navbar-nav>li>a:hover{
-  color: #bbb;
-}
-
-.list-group-item,
-.list-group-item:first-child {
-  border: none;
-  border-radius: 0px;
-  box-shadow: 2px 2px 5px #ccc;
-}
-
-.list-group-item:last-child {
-  margin-bottom: 50px;
 }
 
 .thumbnail {
