--- a/components/style.css
+++ b/components/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Courier;
+  font-family: Rockwell;
 }
 
 a:link {color: #777; text-decoration: underline; }
@@ -17,8 +17,7 @@ h1{
 	background: none;
   border: none;
 	display: inline-block;
-  padding: 30px;
-  margin-bottom: 50px;
+  margin-bottom: 15px;
 }
 
 .blurb-thumbnail{
@@ -43,11 +42,18 @@ h1{
 .navbar>.container{
   margin-top: 20px;
 }
+/*
+.container>.navbar-header {
+  float: none;
+  text-align: center;
+}
+*/
 
 .navbar-default .navbar-brand {
   font-size: 24px;
   color: black;
   text-decoration: none;
+  /*float: none;*/
 }
 
 .navbar-default .navbar-collapse, 
@@ -72,9 +78,37 @@ h1{
   border: none;
 }
 
+@media (min-width: 1000px){
+  body {
+    width: 1000px;
+    margin: auto;
+  }
+
+  #notebook>.container{
+    width: 1000px;
+  }
+}
+
 @media (min-width: 768px){
   .navbar {
     border-radius: 0px;
 
   }
+
+  .navbar .navbar-nav {
+    clear: left;
+    position: relative;
+    left: -30px;
+  }
+
+  .navbar .navbar-collapse {
+      text-align: center;
+  }
+
+  
+  .navbar .navbar-collapse {
+      text-align: center;
+  }
+
+
 }
