--- a/components/style.css
+++ b/components/style.css
@@ -80,12 +80,20 @@ h1{
 
 @media (min-width: 1000px){
   body {
-    width: 1000px;
+    max-width: 900px;
     margin: auto;
   }
-
+  .navbar>.container{
+    max-width: 900px;
+  }
+  .list-group.container{
+    max-width: 900px;
+  }
+  .list-group>.container{
+    max-width: 900px;
+  }
   #notebook>.container{
-    width: 1000px;
+    max-width: 900px;
   }
 }
 
@@ -95,11 +103,16 @@ h1{
 
   }
 
+ 
   .navbar .navbar-nav {
+     /*
     clear: left;
-    position: relative;
     left: -30px;
+    */
+    position: relative;
+    bottom: -3px;
   }
+  
 
   .navbar .navbar-collapse {
       text-align: center;
