fixed font issue

--- a/components/style.css
+++ b/components/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Avro', 'Courier', serif;
+  font-family: 'Arvo', 'Courier', serif;
 }
 
 a:link {color: #777; text-decoration: underline; }
