--- a/components/style.css
+++ b/components/style.css
@@ -1,3 +1,11 @@
+@font-face {
+  font-family: 'Arvo';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Arvo'), url("/components/arvo.woff2") format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
+}
+
 body {
   font-family: 'Arvo', 'Courier', serif;
 }
@@ -5,7 +13,7 @@ body {
 a:link {color: #777; text-decoration: underline; }
 a:active {color: #777; text-decoration: underline; }
 a:visited {color: #aaa; text-decoration: underline; }
-a:hover {color: #000; text-decoration: none; }
+a:hover {color: #333; text-decoration: underline; }
 
 h1{
   text-align: center;
